# self-evolving-customer-support-agent

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md  _check.py  _gen.py
design/: CURRENT_ARCHITECTURE.md  NEXT_PHASE_P1.md  PITCH.md  PROJECT_NARRATIVE.md  PROJECT_VS_INDUSTRY_2026.md  RESUME_BULLETS.md  ROADMAP_V2.md  apr_cs_innovation.md  production_architecture.md  project_design.md  senior_review.md
docs/: langfuse_integration.md  mcp_integration.md  observability_v2.md  openviking_fs_context.md  openviking_real_validation.md  skills_format.md  tau2_integration.md
experiments/: metrics.json  report.md
mcp_servers/: __init__.py  _path_bootstrap.py  handoff_server.py  order_server.py  refund_server.py  user_server.py
research/: 01_survey_synthesis.md  02_github_landscape.md  03_industry_and_jd.md  04_real_datasets.md  05_2026_github_radar.md  06_china_community_pulse.md  07_claude_code_ecosystem.md
scripts/: build_episodic_demo.py  demo_subagent_isolation.py  expand_kb_from_bitext.py  export_phoenix_aggregate.py  mcp_demo.py  plot_evolution.py  push_to_phoenix.py  replay_to_langfuse.py  run_apr_cs_ablation.py  run_calibration.py  run_cost_benefit_analysis.py  run_exp_g_memory_scale.py  run_experiment.py  run_fs_ablation.py  run_governed_evolution.py  run_handoff_demo.py  run_hooks_demo.py  run_noisy_feedback_evolution.py  run_production_demo.py  run_retrieval_ablation.py  run_stress_test.py  run_stress_test_exp_c.py  run_stress_test_exp_d.py  run_stress_test_exp_e.py  (+10 more)
(+409 files in other folders)
